// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader should render 1`] = `
<div>
  <div
    class="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            aria-label="Home"
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
  </div>
  <h1
    class="page-header page-header-brand"
  >
    <div
      class="page-header-title"
    >
       
      Payer Space
    </div>
  </h1>
</div>
`;

exports[`PageHeader should render app icon 1`] = `
<div>
  <div
    class="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            aria-label="Home"
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
  </div>
  <h1
    class="page-header page-header-brand"
  >
    <div
      class="page-header-title"
    >
      <span
        class="app-icon app-icon-black"
        title="Payer Space"
      >
        PS
      </span>
       
      Payer Space
    </div>
  </h1>
</div>
`;

exports[`PageHeader should render app icon color 1`] = `
<div>
  <div
    class="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            aria-label="Home"
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
  </div>
  <h1
    class="page-header page-header-brand"
  >
    <div
      class="page-header-title"
    >
      <span
        class="app-icon app-icon-green"
        title="Payer Space"
      >
        PS
      </span>
       
      Payer Space
    </div>
  </h1>
</div>
`;

exports[`PageHeader should render app icon color branded 1`] = `
<div>
  <div
    class="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            aria-label="Home"
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
  </div>
  <h1
    class="page-header page-header-brand"
  >
    <div
      class="page-header-title"
    >
      <span
        class="app-icon app-icon-branded-green"
        title="Payer Space"
      >
        PS
        <span
          class="caret"
        />
      </span>
       
      Payer Space
    </div>
  </h1>
</div>
`;

exports[`PageHeader should render children 1`] = `
<div>
  <div
    class="d-flex align-items-start"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            aria-label="Home"
            href="/public/apps/dashboard"
          >
            Home
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Payer Space
        </li>
      </ol>
    </nav>
  </div>
  <h1
    class="page-header page-header-brand"
  >
    <div
      class="page-header-title"
    >
       
      <p>
        this is cool
      </p>
    </div>
  </h1>
</div>
`;
